2005-01-06  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(global-set-key): set M-DEL to kill-syntax-backward

	* dotemacs-cust.el:
	(custom-set-variables): suppress changelog indentation

	* config/fracc-config.el:
	autoload problem. let it work now, investigate later

2005-01-02  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	more experimental stuff

	* dotemacs-cust.el:
	(custom-set-faces): make faces more usable on dark background

	* config/:
	initial checkin, new directory for configuration code

	* perso/psvn-hacked.el:
	initial checkin, new version of psvn for log-edit usage

	* perso/elect-mbuf.el:
	initial checkin

	* perso/autoloads.el:
	separate autoloads for byte-compilation

2004-12-04  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	(nbc-nnir): set it to nil

2004-12-02  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/bst.el:
	(bst-font-lock-keywords): fixed parse error

	* dotemacs.el:
	(alt): use this modifier for windmove-default-keybindings
	(icomplete): more completions

	* dotemacs-cust.el:
	(custom-set-variables): ECB vc integration

2004-11-21  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(dired-mode-map): delay binding

	* dotemacs.el:
	(dired-load-hook): use ediff from dired

	* dotemacs-cust.el:
	(custom-set-variables): omit only . (not ..) in dired mode

2004-11-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/graphviz-dot-mode.el:
	initial checkin

	* perso/fold-dwim.el:
	initial checkin

	* perso/psvn.el:
	new version

	* dotemacs.el:
	(dired-mode-map): bind "C-c C-c" to wdired mode
	(kbd): typo

	* dotemacs-cust.el:
	(custom-set-variables): allow wdired to change permissions

2004-10-27  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(abbrev-mode): use it in LaTeX-mode
	(server): in case one wants to use emacs on background
	(global-set-key): suppress speedbar key, add cvs ones
	(auto-mode-alist): muse files

	* dotemacs-cust.el:
	(custom-set-variables): break lines in a smarter way
